--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="Portfolio.css">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <title>My Portfolio</title>
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H5279G9S7D"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){
-      dataLayer.push(arguments);
-    }
-    gtag("js",new Date());
-    gtag("config", "G-H5279G9S7D");
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H5279G9S7D');
   </script>
 </head>
 
