--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <p>Python Programming Intern <br>Sept 2023 - Oct 2023</p>
         </div>
       </div>
-      <p>I am a 3<sup>rd</sup> year student at <span>Prof. Ram Meghe Institute of Technology and Research, Badnera</span>, pursuing a Bachelor's degree in <span>Computer Science and Engineering</span>. I have a strong foundation in programming languages such as Python, Java, HTML-CSS, & Javascript and I have completed multiple certifications. I am passionate about coding and problem-solving, and I am always eager to explore new technologies and take on challenging projects. My goal is to connect with like-minded professionals, find internship opportunities, and collaborate on exciting projects in the world of computer science.</p>
+      <p>Pursuing Bachelor's of Engineering in Computer Science & Engineering at <span>Prof. Ram Meghe Institute of Technology and Research, Badnera</span>.I have a strong foundation in programming languages such as Python, Java, HTML-CSS, & Javascript,Proficient in data structures & algorithms, web development and software engineering.Passionate about developing efficeint,scalable solutions,problem-solving, and a constant learner always eager to explore and learn new technologies and take on challenging projects. My goal is to connect with like-minded professionals, find internship opportunities, and collaborate on exciting projects in the world of computer science.</p>
       <a href="img/Vinay_bramhkar_resume.pdf" class="resume" download="Vinay_bramhkar_resume.pdf" onclick="showDownloadNotification()">Download Resume</a>
     </div>
   </div>
