--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <a href="#Certifications" type="button" class="cta">Portfolio</a>
     </div>
     <div class="hero-image">
-      <img src="img/about.jpg" alt="Profile Image">
+      <img src="img/VinyIMG.jpg" alt="Profile Image">
     </div>
   </div>
 </section>
